# yolo-ffmpeg-mcp

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  .mcp.json  Alternatively, you can force remove without confirmation  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT_NOTES.md  Dockerfile  Dockerfile.ci-test  Dockerfile.simple  FUTURE_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  KOMPOSITION_BUILD_SYSTEM_SUMMARY.md  MCP_INTERFACE_IMPROVEMENTS.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  SPEECH_DETECTION_SUMMARY.md  WORKFLOW_EFFICIENCY_ANALYSIS.md  YOLO_IMPROVEMENTS_SUMMARY.md  add-mcp.sh  analyze_transition_artifacts.py  build-docker.sh  containerfile  correct_multi_video_komposition.json  create_correct_production.py  create_final_panning_video.py  create_final_production.py  create_video_only_composition.py  debug_effects.py  docker-compose.yml  fancy_effects_komposition.json  ffmpeg-mcp-implementation-spec.md  fix_transition_artifacts.py  komposition_no_effects.json  komposition_with_effects.json  main.py  (+20 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
archive/: 2. **Get video content analysis** (run this for each video file you want to use)
deployment/: docker-test-fix.sh
docker/: Dockerfile.ci  Dockerfile.ci-test  Dockerfile.minimal  Dockerfile.pytorch  Dockerfile.ubuntu
documents/: AUDIO_PROCESSING_FINDINGS.md  COMPLETE_WORKFLOW_ANALYSIS_SUMMARY.md  DOCKER_SETUP.md  Describing_effects.md  EXTERNAL_LLM_VIDEO_EFFECTS_RESEARCH_PROPOSAL.md  FUTURE_IMPROVEMENTS.md  INTELLIGENT_VIDEO_COMPOSITION_PLAN.md  README.md  (+22 more)
(+126 files in other folders)
